# zop

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_plan.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
skills/zop/: README.md  SKILL.md
src/zop/: __init__.py  __main__.py  _version.py  cli.py
src/zop/adapters/: __init__.py  sqlite_reader.py  zotero_api.py
src/zop/commands/: __init__.py  collection.py  export.py  item.py  library.py  note.py  pdf.py  tag.py
src/zop/core/: __init__.py  concurrency.py  config.py  envelope.py  errors.py
src/zop/models/: __init__.py  collection.py  common.py  envelope.py  item.py
src/zop/services/: __init__.py  collections.py  export.py  items.py  library.py  notes.py  pdf.py  tags.py
tests/: __init__.py  conftest.py  test_cli_collection.py  test_cli_export.py  test_cli_item.py  test_cli_library.py  test_cli_main.py  test_cli_note.py  test_cli_plan.py  test_cli_tag.py  test_collections.py  test_config.py  test_envelope.py  test_export.py  test_items_service.py  test_library.py  test_notes_service.py  test_pdf.py  test_tags_service.py  test_zotero_api.py
tools/: inspect_sqlite.py  inspect_tables.py
