[project]
name = "zop"
dynamic = ["version"]
description = "High-throughput Zotero CLI focused on batch operations and automation"
readme = "README.md"
license = "MIT"
authors = [{ name = "zop contributors" }]
requires-python = ">=3.12"
keywords = ["zotero", "cli", "batch", "bibliography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.7",
    "platformdirs>=4.2",
    "pypdf>=4.0",
]

[project.scripts]
zop = "zop.cli:main"

[project.urls]
Homepage = "https://github.com/anomalyco/zop"
Issues = "https://github.com/anomalyco/zop/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/zop/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zop"]
exclude = [
    "/.github",
    "/tools",
    "/tests",
    "*.sqlite",
    "*.sqlite-journal",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # Use of assert (fine in tests)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["zop"]
combine-as-imports = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "N801"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["pypdf.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=zop",
    "--cov-report=term-missing",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::ResourceWarning",
]
